# Isaac-Lab-Arm-Manipulation-Continuous-Control-RL-and-Diffusion-Policy

./: .gitignore  README.md  RUN.md  pyproject.toml  requirement.txt
agents/: __init__.py  backbone.py  checkpointing.py  distributions.py  fake_checkpoints.py  heads.py  normalization.py  replay_buffer.py  sac.py  td3.py  torch_image_aug.py
configs/: __init__.py  project_config.py  task_config.py
dataset/: __init__.py  episode_dataset.py
env/: __init__.py  franka_lift_camera_cfg.py  isaac_env.py
eval/: __init__.py  checkpoint_eval.py  eval_loop.py  gif_recorder.py  visual_helpers.py
logs/: final_heuristic_demo_metrics.json  final_heuristic_replay_episode_001_demo_metrics.json  final_heuristic_replay_episode_002_demo_metrics.json  final_random_demo_metrics.json  final_replay_from_heuristic_demo_metrics.json  sac_smoke_train.json  sac_smoke_train.jsonl
plans/: plan_isaac_arm_manipulation.md  subplan_isaac_arm_manipulation.md
policies/: __init__.py  base.py  checkpoint_policy.py  heuristic_policy.py  random_policy.py  replay_policy.py
scripts/: __init__.py  benchmark_rollout_collection.py  collect_rollouts.py  demo_data_loop.py  eval_checkpoint_continuous.py  inspect_auto_reset_visuals.py  inspect_rollout_dataset.py  install_isaac.sh  isaac_camera_observation_smoke.py  isaac_runtime_smoke.py  record_gif_continuous.py  record_multi_best_envs.sh  train_sac_continuous.py  train_td3_continuous.py
tests/: test_agent_primitives.py  test_auto_reset_visual_diagnostic.py  test_camera_enabled_env_cfg.py  test_demo_data_loop.py  test_demo_dataset.py  test_image_aug.py  (+19 more)
(+16 files in other folders)
